--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-  "ocrSpaceApiKey" : "K87907269788957", 
-  "spamChannelID" : "1116303275843666052", 
-  "logChannelID" : "1206206595319464006", 
-  "errorChannelID" : "1206206684066746409", 
-  "OwnerID" : "1027226671604052090",
-  "TOKEN" : "MTExNjAwMTUzMDM3ODcyNzQ1NA.GSJKiw.wdvKvkXzticAaHiLka61ml3dgsMFfXH-YDYTCc"
+  "ocrSpaceApiKey" : "", 
+  "spamChannelID" : "", 
+  "logChannelID" : "", 
+  "errorChannelID" : "", 
+  "OwnerID" : "",
+  "TOKEN" : "
 }
 
